@@ -34,6 +34,7 @@ BETA ======= 1.8.1
 - added: F.isWorker (is true when is called F.load())
 - added: F.isCluster (is true when the framework is running in the cluster)
 - added: Array.unique() by Andrea Sessa
+- added: String.base64ToBuffer();
 
 - updated: (IMPORTANT) routing: `json` flag is not required for receiving incomming data as JSON
 - updated: `F.mail(address, subject, view, [model], [callback], [language])` added language
